# quantum_irops

./: .gitignore  LICENSE  app.py  main.py  pyproject.toml  utils.py
notebooks/: data_exploration.ipynb
