[project]
name = "quantum_irops"
version = "0.1.0"
description = "IROPS pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "airportsdata>=20260205",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "shiny>=1.5.1",
    "shinywidgets>=0.7.1",
]

